// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createRedirectPageContent encodes uri special chars 1`] = `
"<!DOCTYPE html>
<html>
  <head>
    <meta charset="UTF-8">
    <meta http-equiv="refresh" content="0; url=https://ianaio.io/gr/%CF%83%CE%B5%CE%BB%CE%B9%CE%B4%CE%B1%CF%82/">
    <link rel="canonical" href="https://ianaio.io/gr/%CF%83%CE%B5%CE%BB%CE%B9%CE%B4%CE%B1%CF%82/" />
  </head>
  <script>
    window.location.href = 'https://ianaio.io/gr/%CF%83%CE%B5%CE%BB%CE%B9%CE%B4%CE%B1%CF%82/' + window.location.search + window.location.hash;
  </script>
</html>"
`;

exports[`createRedirectPageContent works 1`] = `
"<!DOCTYPE html>
<html>
  <head>
    <meta charset="UTF-8">
    <meta http-equiv="refresh" content="0; url=https://ianaio.io/">
    <link rel="canonical" href="https://ianaio.io/" />
  </head>
  <script>
    window.location.href = 'https://ianaio.io/' + window.location.search + window.location.hash;
  </script>
</html>"
`;
